# Aether_Oncology

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .grype.yaml  CHANGELOG.md  Dockerfile  HIPAA_AUDIT_SUMMARY.md  Makefile  PRODUCTION_HARDENING.md  PROJECT_STATUS.md  README.md  README.pt-br.md  app_streamlit.py  architecture-audit-report.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  vercel.json  vite.config.js
.cache/research/: cache.db-shm  cache.db-wal
.github/workflows/: ci.yml  enterprise-cd.yml  keep_alive.yml  ml-ct-pipeline.yml  mlops-pipeline.yml  unified-mlops-pipeline.yml
.understand-anything/: knowledge-graph.json
data/raw/: DATASET_LICENSE.md  data.csv
design/: ai-behavior-guidelines.md  clinical-density.md  evidence-visualization.md  motion-principles.md  visual-language.md
docs/: AUDIT_PHI_IMPLEMENTATION.md  AUDIT_REPORT.md  AUDIT_USAGE_EXAMPLES.md  CRISP_DM.md  DATA_RISK_MITIGATION.md  DEPLOY_ARCHITECTURE.md  ENTREGA_TECH_CHALLENGE.md  FINDINGS.md  INFRASTRUCTURE.md  ML_CANVAS.md  MODEL_CARD.md  MONITORING.md  MONITORING_PLAYBOOK.md  SCIENTIFIC_INTEGRATION.md  benchmark.md  data_dictionary.yaml  dataset_audit_report.md
frontend/: .env.production  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/src/animations/: chartReveal.ts  fade.ts  glowHover.ts  stagger.ts
frontend/src/app/: globals.css  layout.tsx  qa-audit.md
frontend/src/app/(marketing)/: layout.tsx  page.tsx
frontend/src/app/(marketing)/blog/: page.tsx
frontend/src/app/(marketing)/careers/: page.tsx
frontend/src/app/(marketing)/company/: page.tsx
frontend/src/app/(marketing)/contact/: page.tsx
frontend/src/app/(marketing)/developers/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/dashboard/: DashboardContainer.tsx  PrecisionDashboard.tsx  precision-dashboard.css
frontend/src/components/shared/: SoonPage.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/src/config/: branding.ts  metrics.ts  motion.ts  navigation.ts  site.ts
frontend/src/data/mock/: biomarkers.ts  rag.ts  xai.ts
frontend/src/hooks/: useReducedMotion.ts
infrastructure/kubernetes/: deployment.yaml  ingress.yaml
infrastructure/terraform/: main.tf  variables.tf
logs/: audit_trail.jsonl
models/: aether_mlp_v1.pth  aether_mlp_v2.pth  calibrator.joblib  data_lineage.json  fairness_audit.json  model_card.md  ood_detector.joblib  preprocessor.joblib
models/calibration/: brier_score.json  calibration_metrics.json  calibrator.joblib
notebooks/: eda_aether_oncology.ipynb  eda_oral_cancer.ipynb
reports/: benchmark_NO_leakage.csv  benchmark_WITH_leakage.csv  benchmark_aether_screening_NO_leakage.csv  benchmark_aether_screening_WITH_leakage.csv  benchmark_aether_triage_NO_leakage.csv  benchmark_aether_triage_WITH_leakage.csv  benchmark_cost_NO_leakage.csv  benchmark_cost_WITH_leakage.csv  benchmark_cost_aether_screening_NO_leakage.csv  benchmark_cost_aether_screening_WITH_leakage.csv  benchmark_cost_aether_triage_NO_leakage.csv  benchmark_cost_aether_triage_WITH_leakage.csv
scratch/: analyze_dataset.py  regenerate_data.py
scripts/: diagnose_features.py
src/: benchmark.py  main.py  optimize.py  train.py
src/api/: __init__.py  approval_router.py  schemas.py
src/api/routes/: clinical_chat.py  clinical_tools.py
src/config/: __init__.py  phi_patterns.json
src/core/: logging.py  model_meta.py
src/features/: __init__.py  preprocessor.py
src/ml/pipelines/: lineage.py  model_card_generator.py
src/ml/pipelines/audit/: fairness.py  leakage.py
src/ml/pipelines/calibration/: calibration_engine.py
src/ml/pipelines/drift/: drift_rules.py
src/ml/pipelines/preprocessing/: feature_registry.json  ood.py  preprocessing.py
src/ml/pipelines/validation/: clinical_rules.py  inference_schema.py  training_schema.py
src/ml_platform/: drift.py  fairness.py  green_ai.py  orchestrator.py  preprocessor.py  train_enterprise.py  train_oral_cancer.py
src/models/: mlp.py
src/orchestration/: clinical_runtime.py
src/providers/: base.py  circuit_breaker.py  gemini_provider.py  groq_provider.py  judge_provider.py  openai_provider.py  router.py
src/safety/: clinical_judge.py  consensus_engine.py  escalation_policy.py  hallucination_guard.py  phi_scrubber.py  policy.py  types.py
src/scripts/: compliance_report.py  migrate_audit_to_mongo.py  migrate_logs.py  verify_audit_chain.py
src/services/: approval_store.py  audit.py  audit_archive_job.py  audit_chain.py  audit_logger.py  audit_rotation.py  audit_store_mongo.py  compliance_report.py  inference_client.py  mongo.py  predictor.py  research.py  slack_alerter.py
src/static/: index.html  portal.html
src/static/aether-oncology-portal/: index.html  package-lock.json  portal.html  privacy.html  robots.txt  terms.html
src/static/aether-oncology-portal/css/: enterprise-design-system.css  portal-terminal.css  portal.css  tailwind-input.css  tailwind.css
src/static/aether-oncology-portal/js/: animations.js  api.js  charts.js  main.js  portal.js  shortcuts.js  starfield.js  state.js  tabs.js  ui.js  ux.js
src/streaming/: protocol.py  sse.py
src/tools/: __init__.py  biomarker_adapter.py  clinical_rag.py  therapy_matcher.py
tests/: conftest.py  test_api.py  test_approval_resolve.py  test_approval_router.py  test_audit.py  test_audit_archive_job.py  test_audit_chain.py  test_audit_compliance.py  test_audit_mongo.py  test_audit_rotation.py  test_clinical_tools.py  test_clinical_tools_router.py  test_compliance_report.py  test_consensus_engine.py  test_model.py  test_preprocessor_facade.py  test_research.py  test_safety_policy.py  test_schema.py  test_slack_alerter.py
(+126 files in other folders)
