[project]
name = "aether-oncology"
version = "2.0.0"
description = "Classificador de tumores malignos via MLP em PyTorch com RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "aiofiles>=23.2.1",
    "pydantic>=2.7.0",
    "torch>=2.4.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.3.2",
    "mlflow>=2.15.0",
    "pandas>=2.2.0",
    "pandera>=0.18.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "psutil>=5.9.0",
    "optuna>=3.6.0",
    "biopython>=1.83",
    "diskcache>=5.6.3",
    "slowapi>=0.1.9",
    "python-json-logger>=2.0.7",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter ultrarrápido (20% da nota)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true
extend-exclude = ["notebooks", "data", "docs", "models"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort — ordenação de imports
]
ignore = [
    "E501",  # linhas longas nos testes (strings de payload extensas)
]

# ---------------------------------------------------------------------------
# Pytest — executor de testes (25% da nota)
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]          # garante que `from src.xxx import` funciona
addopts   = "-v --tb=short" # output verboso por defeito

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"